@@ -1,4 +1,4 @@
-# last modified 2017-04-05 by J. Fox
+# last modified 2017-04-16 by J. Fox
 
 importFrom(Hmisc, rcorr, print.rcorr)
 importFrom(MASS, stepAIC)
@@ -14,17 +14,20 @@ importFrom(graphics, abline, arrows, axis, barplot, box, hist, legend, lines,
     matplot, mtext, par, plot, points, polygon, strheight, text, title)
 importFrom(grDevices, n2mfrow, palette)
 importFrom(stats, coef, complete.cases, cor, dist, formula, kmeans, 
-    model.matrix, na.omit, p.adjust, pf, pt, qt, quantile, runif, sd, update)
+    model.matrix, na.omit, shapiro.test, p.adjust, pf, pt, qt, quantile, runif, sd, update)
+importFrom(nortest, ad.test, cvm.test, lillie.test, pearson.test, sf.test)
 
 export(assignCluster, Barplot, bin.var, binnedCounts, binVariable, 
     colPercents, DeltaMethod, discretePlot,
-    Dotplot, excel_sheets, Hist, indexplot, KMeans, lineplot, mergeRows, 
+    Dotplot, excel_sheets, Hist, indexplot, KMeans, lineplot, mergeRows, normalityTest,
     numSummary, partial.cor, plotBoot, plotDistr, plotMeans, rcorr.adjust, 
     readXL, readSAS, readSPSS, readStata, reliability, rowPercents, 
     stepwise, summarySandwich, totPercents,
     dgumbel, pgumbel, qgumbel, rgumbel)
 
 S3method(mergeRows, data.frame)
+S3method(normalityTest, default)
+S3method(normalityTest, formula)
 S3method(print, DeltaMethod)
 S3method(print, numSummary)
 S3method(print, partial.cor)
